tests/typing/pass/array/array_composite_post.act
contract A

constructor()

creates

  uint[2][2] x := [[1, 2],[3, 4]]

transition f(uint[2] a)

iff
  x == [[1, 2],[3, 4]]
  a == [1,2]

updates

  x[0][0] := 3
  x[0][1] := 2
  x[1][0] := 1
  x[1][1] := 0

ensures
  post(x) == (if pre(x) == [a,[3,4]] then [[3,2],[1,0]] else [[0,0],[0,0]])
