tests/typing/fail/array/mistyped_access.act
contract M

constructor()

creates

  uint[3] a := [1,2,3]


transition f() : uint

iff

  a[1 > 3] > 4

updates
returns 1
